--- a/templates/news.html
+++ b/templates/news.html
@@ -162,6 +162,18 @@
                     </form>
                 </div>
             {% endfor %}
+
+        <div class="footer-content">
+            <p>&copy; 2024 Gipson Family Webpage. All rights reserved.</p>
+            <div class="social-icons">
+                <a aria-label="Facebook" href="https://www.facebook.com/gipson.reunion.96" target="_blank">
+                    <img alt="Facebook" height="40" src="{{ url_for('static', filename='images/3EC3D6D6-0087-4ECE-A021-078CD138FE11_4_5005_c.jpeg') }}" width="40">
+
+
+                </a>
+            </div>
+        </div>
+
         </div>
     </div>
 </body>
