--- a/templates/family_photos.html
+++ b/templates/family_photos.html
@@ -137,5 +137,17 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+        <div class="footer-content">
+            <p>&copy; 2024 Gipson Family Webpage. All rights reserved.</p>
+            <div class="social-icons">
+                <a aria-label="Facebook" href="https://www.facebook.com/gipson.reunion.96" target="_blank">
+                    <img alt="Facebook" height="40" src="{{ url_for('static', filename='images/3EC3D6D6-0087-4ECE-A021-078CD138FE11_4_5005_c.jpeg') }}" width="40">
+
+
+                </a>
+            </div>
+        </div>
+
 </body>
 </html>
