added facebook tag

--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>Weekend Getaway Itinerary</title>
+    <!-- Description meta tag for SEO and accessibility -->
+    <meta content="Join the Gipson Family Reunion for a weekend of fun, activities, and family bonding in Delaware. Get ready for an unforgettable experience with your loved ones!" name="description">
+    <!-- Bootstrap CSS -->
     <title>Contact Your State Representative</title>
     <style>
         .navbar {
@@ -269,7 +274,7 @@
         <li><a href="{{ url_for('family_photos_main') }}">Family Photos</a></li>
     </ul>
 </nav>
-
+<h1> State Representatives Map </h1>
 <div class="container">
     <h1 class="text-center mt-5">Contact Your State Representative</h1>
     <div id="map"></div>
