--- a/templates/info.html
+++ b/templates/info.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Weekend Getaway Itinerary</title>
+    <!-- Description meta tag for SEO and accessibility -->
+    <meta content="Join the Gipson Family Reunion for a weekend of fun, activities, and family bonding in Delaware. Get ready for an unforgettable experience with your loved ones!" name="description">
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -30,7 +32,6 @@
             margin: 80px 20px;
         }
 
-        /* Remove background for the content, headings, and paragraphs */
         .content h4, .content p, .content h2, .content h1, .content h3 {
             background: none;
             padding: 10px;
@@ -44,7 +45,7 @@
             border-radius: 8px;
             max-width: 600px;
             margin: 20px auto;
-            color: #333; /* Standard text color inside the form */
+            color: #333;
         }
 
         form label {
@@ -202,7 +203,7 @@
             <h1>Saturday Night: 90s HipHop Party</h1>
             <img alt="DART First State" class="img-fluid" src="https://mail.google.com/mail/u/0?ui=2&ik=ef9e50ef91&attid=0.1&permmsgid=msg-a:r2240289109222331617&th=1904c3571d4297db&view=fimg&fur=ip&sz=s0-l75-ft&attbid=ANGjdJ9ttMDM-fnv7My_kM7uQmPpTfUPlh6U3_OgheAS1x4ay4G7ZDZSVGYIPIg6dSYaUYmJX6NbMzNWdbZYqeKWxdbr_L48IsDdI3TSwfq14cpaQwQDahxJroayfUY&disp=emb&realattid=1DA8CBFD-9C67-4430-ABB1-C34C57B6599E" />
             <p>Come snap back to the 90s with a fun get-together on Saturday night featuring R&B and Hip-hop music! The event starts at 6:30 PM and ends at 11 PM.</p>
-            <p>There’s also an exciting opportunity to walk away with special prizes. Raffle tickets will be given upon arrival once paid for. Each raffle ticket is $ 2.00.</p>
+            <p>There’s also an exciting opportunity to walk away with special prizes. Raffle tickets will be given upon arrival once paid for. Each raffle ticket is $2.00.</p>
             <p>The more tickets you buy, the greater your chances of winning a prize!</p>
             <h1>90s Hip-hop Outfit Contest!</h1>
             <p>Show off your best 90s outfit! The winner will receive a special prize.</p>
@@ -217,13 +218,6 @@
         </section>
     </main>
     <footer>
-      <!-- Footer content here -->
-    </footer>
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
         <div class="footer-content">
             <p>&copy; 2024 Gipson Family Webpage. All rights reserved.</p>
             <div class="social-icons">
@@ -232,6 +226,11 @@
                 </a>
             </div>
         </div>
+    </footer>
 
-  </body>
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
 </html>
