--- a/templates/news.html
+++ b/templates/news.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>Weekend Getaway Itinerary</title>
+    <!-- Description meta tag for SEO and accessibility -->
+    <meta content="Join the Gipson Family Reunion for a weekend of fun, activities, and family bonding in Delaware. Get ready for an unforgettable experience with your loved ones!" name="description">
+    <!-- Bootstrap CSS -->
     <title>Share News</title>
     <style>
         body {
