added facebook tag

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,7 @@
     <title>Gipson Family History</title>
     <style>
         body {
-            background-image: url('https://i.imgur.com/xH81R2h.jpeg');
+            background-image:# #f0f0f0;
             background-size: cover;
             background-position: center;
             margin: 0;
